tests/ui/parser/fn-with-default-expr.rs
fn foo(x: i32 = 1) {}
//~^ ERROR parameter defaults are not supported

fn main() {}
